--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,5 @@
 files:
   - source: /en/*json
     translation: '%original_path%/*json'
+  - source: /hu/*json
+    translation: '%original_path%/common.json'
