--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,3 @@
 files:
   - source: /en/*json
-    translation: '%original_path%/*json'
-  - source: /hu/*json
-    translation: '%original_path%/common.json'
+    translation: '%two_letters_code%/common.json'
